ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Broadcaster_Schedule_Process__c/CnP_PaaS__Broadcaster_Schedule_Process__c.object-meta.xml
<CustomObject>
    <label>C&amp;P Broadcaster Schedule Process</label>
    <nameField>
        <label>Broadcaster Schedule Process Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>C&amp;P Broadcaster Schedule Process</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>