ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Broadcaster_Schedule_Process__c/fields/CnP_PaaS__End_Date__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>