ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Broadcaster_Schedule_Process__c/fields/CnP_PaaS__End_Occurrences__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__End_Occurrences__c</fullName>
    <label>End Occurrences</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>