ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Broadcaster_Schedule_Process__c/fields/CnP_PaaS__Recurring_Broadcast__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Recurring_Broadcast__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recurring Broadcast</label>
    <type>Checkbox</type>
</CustomField>