ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Broadcaster_Schedule_Process__c/fields/CnP_PaaS__Repeats__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Repeats__c</fullName>
    <label>Repeats</label>
    <length>255</length>
    <type>Text</type>
</CustomField>