ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Broadcaster_Schedule_Process__c/fields/CnP_PaaS__Starts_on__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Starts_on__c</fullName>
    <label>Starts on</label>
    <type>Date</type>
</CustomField>